package ice.ice;

public class Bus extends Transport{
    public Bus(double averageSpeed, FuelType fuelType, double distance) {
        super("Bus", averageSpeed, fuelType, distance);
    }



}   // end Bus class
