package ice.ice;

public class RenewableEnergy {
}
