package ice.ice.controllers;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.Button;

public class mainMenuSceneController {

    @FXML
    private Button co2Button;

    @FXML
    private Button settingsButton;

    @FXML
    void handleCo2(ActionEvent event) {

    }

    @FXML
    void handleSettings(ActionEvent event) {

    }
}
